# CMakeList.txt : CMake project for Helper, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Helper")

# Add source to this project's executable.
add_executable (Helper "Helper.cpp" "Helper.h")

# TODO: Add tests and install targets if needed.
